2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
	  src/gconf-helpers/Makefile.am
		- (nm_gconf_get_keyring_items): new function; pull generic bits out
			of applet_exported_connection_get_secrets() so that the connection
			editor can use them too

	* src/applet-dbus-settings.c
		- (applet_exported_connection_get_secrets): pull keyring-reading stuff
			out into nm_gconf_get_keyring_items() and use that instead

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
		- Add combo for specifying WEP key index

	* src/wireless-security/wireless-security.c
	  src/wireless-security/wireless-security.h
		- (ws_wep_fill_connection): fold into ws-wep-key.c's fill_connection()
			which is now it's only user

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wep-key.h
		- (key_index_combo_changed_cb): new function; save current key to its
			index
		- (destroy): zero out keys
		- (fill_connection): fold in functionality of ws_wep_fill_connection(),
			handle WEP key index too
		- (ws_wep_key_new): select the WEP key index

	* src/wireless-dialog.c
		- (security_combo_init): only get default type for security if security
			is specified

	* src/connection-editor/page-wireless-security.c
		- (ce_page_wireless_security_new): only get default type for security
			if security is specified

2008-03-29  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (security_combo_init): fix active item handling

2008-03-29  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
		- remove the wep_passphrase_widget

	* src/wireless-security/ws-wep-passphrase.c
	  src/wireless-security/ws-wep-passphrase.h
	  src/wireless-security/Makefile.am
		- remove WEP passphrase widget

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wep-key.h
		- Fold WEP passphrase widget into WEP key widget

	* src/wireless-dialog.c
	  src/connection-editor/page-wireless-security.c