@@ -1,5 +1,15 @@
 2008-03-30  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-dialog.c
+		- (get_default_type_for_security): unencrypted connections shouldn't
+			have a wireless-security setting
+		- (security_combo_init): don't set the wireless-security setting if
+			security isn't specified in the wireless setting
+		- (nma_wireless_dialog_get_connection): handle unencrypted connections
+			better
+
+2008-03-30  Dan Williams  <dcbw@redhat.com>
+
 	* src/gconf-helpers/gconf-helpers.c
 	  src/gconf-helpers/gconf-helpers.h
 	  src/gconf-helpers/Makefile.am
